# tonic_weather

./: .tool-versions  Cargo.toml  Dockerfile  README.md  build.rs  compose.yaml
.github/workflows/: docker-image.yml  rust.yml
proto/: weather.proto
src/: main.rs
